git ignore updated

--- a/API_Practice.ipynb
+++ b/API_Practice.ipynb
@@ -117,11 +117,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b92f4805",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import the time library and the datetime module from the datetime library \n",
+    "import time\n",
+    "from datetime import datetime"
+   ]
   },
   {
    "cell_type": "code",
